@@ -18,6 +18,7 @@ RUN apt install -y \
                    libqt5x11extras5-dev \
                    libssl-dev \
                    libtool \
+                   libxss-dev \
                    ninja-build \
                    openjdk-11-jdk \
                    p7zip-full \
